# Kinnova_Gen3_Dof_7_Teleoperation

demotest_moveitServo_kinova_gen3/: README.md
demotest_moveitServo_kinova_gen3/rso2_ws/src/: Dockerfile  docker-compose.yml  docker_servo.yaml  entrypoint.sh  test_all_set.yml  test_in_workspace.yml
demotest_moveitServo_kinova_gen3/rso2_ws/src/config/: gen3_servo.yaml  kortex_standalone.urdf.xacro  my_launch.py  test_all_set.yml
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/camera_republisher/: CMakeLists.txt  README.md  package.xml
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/camera_republisher/config/: kortex_params.yaml
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/camera_republisher/include/camera_republisher/: camera_republisher_component.hpp
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/camera_republisher/launch/: camera_republisher.launch.py
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/camera_republisher/src/: camera_republisher_component.cpp
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/kinova_gen3_teleop/: package.xml  setup.cfg  setup.py
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/kinova_gen3_teleop/config/: dual_xarm6_moveit_fake.launch.py  teleop_params.yaml
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/kinova_gen3_teleop/kinova_gen3_teleop/: arm_controller_node.py  ik_worker.py  joint_tracker.py  teleop_node.py  test.txt
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/kinova_gen3_teleop/launch/: teleop.launch.py
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/kinova_servo_demo/: CMakeLists.txt  package.xml
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/kinova_servo_demo/config/: gen3_2_servo.yaml  joint_limits.yaml
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/kinova_servo_demo/launch/: integrated_demo.launch.py
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/kinova_servo_demo/src/: kinova_integrated_servo.cpp
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/olive_imu_control/: CMakeLists.txt  package.xml
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/olive_imu_control/config/: olive_teleop_params.yaml
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/olive_imu_control/include/olive_imu_control/: olive_teleop_node.hpp
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/olive_imu_control/launch/: olive_teleop.launch.py
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/olive_imu_control/src/: olive_teleop_main.cpp  olive_teleop_node.cpp
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/olive_imu_teleop/: CMakeLists.txt  package.xml
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/olive_imu_teleop/include/: olive_imu_teleop_node.hpp
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/olive_imu_teleop/launch/: olive_imu_teleop.launch.py
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/olive_imu_teleop/src/: olive_imu_teleop_node.cpp
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/ros2_kortex_vision/: CMakeLists.txt  package.xml
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/ros2_kortex_vision/include/ros_kortex_vision/: vision.h
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/ros2_kortex_vision/launch/: kinova_vision.launch.py
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/ros2_kortex_vision/src/: vision.cpp
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/sensagram_teleop/: CMakeLists.txt  package.xml  setup.cfg  setup.py
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/sensagram_teleop/config/: teleop_params.yaml
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/sensagram_teleop/launch/: teleop.launch.py
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/sensagram_teleop/sensagram_teleop/: hand_tracker.py  servo_teleop_node.py
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/sensagram_teleop/src/: sensagram_teleop_node.cpp
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/servo_keyboard_kinova/: CMakeLists.txt  package.xml
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/servo_keyboard_kinova/src/: servo_android_kinova.cpp  servo_keyboard_kinova.cpp
demotest_moveitServo_kinova_gen3/rso2_ws/src/kortex/ros2_ws/src/submodules/ros2_kortex/kortex_api/: CMakeLists.txt
demotest_moveitServo_kinova_gen3/rso2_ws/src/volume/: fastdds.xml
demotest_moveitServo_kinova_gen3/rso2_ws/src/volume/config/: gen3_servo.yaml
demotest_moveitServo_kinova_gen3/rso2_ws/src/volume/kortex_servo_gen3/: package.xml  setup.cfg  setup.py
kinnova_gen3_7_DOF_webcam_teleop/ros2_ws/src/cadfile/: Lock in Filament Band.stl  Stretchlet1.stl  apriltag_base-Body.stl  watch15fill.stl
kinnova_gen3_7_DOF_webcam_teleop/ros2_ws/src/cfgs/: tags_36h11.yaml
kinnova_gen3_7_DOF_webcam_teleop/ros2_ws/src/docker/: Dockerfile  apriltag_Astra.yml  cyclonedds.xml  docker-compose.yml  entrypoint.sh  olive_bridge.yml  on_rob_apriltag.yml  only_ik.yml  zenoh_config.json5
teleoperation_with_apriltags/ros2_ws/install/apriltag_inspector/share/apriltag_inspector/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
teleoperation_with_apriltags/ros2_ws/log/: latest_build
teleoperation_with_apriltags/ros2_ws/src/apriltag_inspector/: setup.cfg  setup.py
teleoperation_with_apriltags/ros2_ws/src/config/: tags_36h11.yaml
teleoperation_with_apriltags/ros2_ws/src/docker/: Dockerfile  follower_compose.yml  ros2_apriltag.yml
teleoperation_with_apriltags/ros2_ws/src/docker_2/: .env  Dockerfile  Readme.md  docker-compose.yml  entrypoint.sh  test.yml
teleoperation_with_apriltags/ros2_ws/src/follower_node/: package.xml  setup.cfg  setup.py
(+174 files in other folders)
