<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kinova_gen3_teleop</name>
  <version>0.1.0</version>
  <description>MediaPipe hand teleoperation for Kinova Gen3 7-DOF</description>
  <maintainer email="user@todo.com">user</maintainer>
  <license>Apache-2.0</license>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>moveit_msgs</depend>
  <depend>control_msgs</depend>
  <depend>tf2_ros</depend>
  <buildtool_depend>ament_python</buildtool_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>