<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>olive_imu_teleop</name>
  <version>1.0.0</version>
  <description>Teleoperate a robotic arm using Olive IMU Pro orientation data</description>
  <maintainer email="gokul@todo.com">gokul</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>moveit_msgs</depend>

  <build_depend>eigen</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
