<?xml version="1.0"?>
<package format="3">
  <name>sensagram_teleop</name>
  <version>0.1.0</version>
  <description>Kinova Gen3 MoveIt Servo teleop via MediaPipe hand tracking</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_srvs</depend>
  <depend>control_msgs</depend>
  <depend>std_msgs</depend>

  <buildtool_depend>ament_python</buildtool_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
